# wotr-log-annotator

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  release.yaml
tests/: test_example.py
wotr_log_annotator/: __main__.py  app.py
